# supertracer

./: .gitignore  README.md  error_log.txt  falta.txt  main.py  pyproject.toml  requerimientos-logger.md  requests.db  sum.py
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api.md  auth.md  configuration.md  connectors.md
src/supertracer/: __init__.py  auth.py  auth_service.py  logger.py  metrics.py  tracer.py
src/supertracer/connectors/: __init__.py  base.py  memory.py  postgresql.py  sql.py  sqlite.py
src/supertracer/connectors/queries/: postgresql.py  sqlite.py
src/supertracer/middleware/: __init__.py  api_middleware.py  logger_middleware.py
src/supertracer/services/: api.py  auth.py  broadcaster.py  cleanup.py  json_options.py  logger.py  metrics.py
src/supertracer/types/: __init__.py  filters.py  logs.py  metrics.py  options.py
src/supertracer/ui/components/: badges.py  filter_dropdown.py  filters.py  header.py  log_entry_card.py  logs_table.py  request_detail_components.py  search_input.py
src/supertracer/ui/components/dashboard/: charts.py  dashboard.py  summary_cards.py  tables.py
src/supertracer/ui/pages/: login_page.py  logs_page.py  request_detail_page.py
src/supertracer/ui/utils/: logs_page.py
supertracer/: __init__.py
supertracer/templates/: logs.html
tests/connectors/: test_connectors.py
tests/middleware/: test_api_middleware.py
tests/services/: test_api_service.py  test_auth.py  test_broadcaster.py  test_json_options.py  test_logger.py  test_metrics.py
tests/types/: test_options_validation.py
