[project]
name = "supertracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tomas Santana", email = "tomas.30604530@uru.edu" },
    { name = "Sebastian Cohen", email = "sebascoga2030@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "nicegui>=3.3.1",
    "psycopg2>=2.9.11",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

dependencies = [
    "nicegui>=2.0.0",
    "fastapi",
]
